Switch to the new VM long form options