@@ -185,7 +185,7 @@ public class Proc {
         }
 
         Stream.of(jdk.internal.misc.VM.getRuntimeArguments())
-            .filter(arg -> arg.startsWith("-XaddExports:"))
+            .filter(arg -> arg.startsWith("--add-exports="))
             .forEach(cmd::add);
 
         Collections.addAll(cmd, splitProperty("test.vm.opts"));
